# bu_mcp

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  SKILL.md  TOOLS.md  docker-compose.yml  pyproject.toml
browser_mcp/: __init__.py  __main__.py  auth_keys.py  constants.py  instructions.py  local_profile.py  server.py  sessions.py  tool_definitions.py  tool_handlers.py
browser_mcp/cloud/: __init__.py  browsers.py
bu_mcp/: __init__.py  __main__.py  auth_keys.py  instructions.py  llm_factory.py  local_profile.py  server.py  sessions.py  tool_definitions.py  tool_handlers.py
bu_mcp/cloud/: __init__.py  browsers.py
docs/: mcp-spec.md
skills/browser-use-mcp/: SKILL.md
tests/: e2e_local_cloud.py  test_http_app.py  test_sessions.py  test_tool_handlers.py
