[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browser-mcp"
version = "0.1.0"
description = "MCP server for browser-use: session_start (local or cloud via bu_profile_id), status, supplement, close"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.12",
    "mcp[cli]>=1.8",
    "httpx>=0.27",
    "pydantic>=2",
]

[project.scripts]
browser-mcp = "browser_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["browser_mcp"]
