[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bu-mcp"
version = "0.1.0"
description = "MCP server for browser-use: session_start (local or cloud via bu_profile_id), status, supplement, close"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.12",
    "mcp[cli]>=1.8",
    "httpx>=0.27",
    "pydantic>=2",
]

[project.scripts]
bu-mcp = "bu_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["bu_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
